--- a/SMSStation/pom.xml
+++ b/SMSStation/pom.xml
@@ -18,7 +18,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-<build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10</version>
+        <configuration>          
+            <stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+            <show>public</show>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+    <build>
     <plugins>
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
