--- a/SMSStation/pom.xml
+++ b/SMSStation/pom.xml
@@ -17,6 +17,11 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>microsoft.aspnet.signalr</groupId>
+            <artifactId>signalr-client-sdk</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
   <reporting>
     <plugins>
