--- a/SMSStation/pom.xml
+++ b/SMSStation/pom.xml
@@ -38,6 +38,15 @@
   </reporting>
     <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.1</version>
+        <configuration>
+          <reportOutputDirectory>${project.reporting.outputDirectory}/javadoc</reportOutputDirectory>
+          <destDir>myapidocs</destDir>
+        </configuration>
+      </plugin>
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
